[package]
name = "supernode"
version = "0.1.0"
edition = "2021"
authors = ["SuperNode Network"]
description = "Ultra-scale distributed mesh network supporting 8 billion concurrent device connections"

[dependencies]
# Async runtime - foundation of everything
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

# High-performance serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"           # Binary serialization for hot paths (10x faster than JSON)

# Networking
tokio-tungstenite = "0.21"  # WebSocket connections
quinn = "0.10"               # QUIC protocol (HTTP/3 transport layer)
rustls = "0.21"              # TLS encryption

# Concurrency & memory
dashmap = "5.5"              # Lock-free concurrent HashMap
crossbeam = "0.8"            # Lock-free channels and queues
parking_lot = "0.12"         # Fast mutexes (2-5x faster than std::sync::Mutex)
rayon = "1.8"                # Data-parallelism for graph computation
arc-swap = "1.6"             # Atomic Arc swaps for hot config

# Graph algorithms
petgraph = "0.6"             # Graph data structures + Dijkstra, MST, BFS

# Hashing & IDs
xxhash-rust = { version = "0.8", features = ["xxh3"] }  # Fastest hash (used by Linux kernel)
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }  # Pinned to avoid Rust 1.85+ requirement
consistent_hash = "0.1"      # Consistent hashing ring for sharding

# Compression
lz4_flex = "0.11"            # Ultra-fast compression for packet payloads
zstd = "0.13"                # Zstandard for bulk storage

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP Server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
openraft = { version = "0.9.21", features = ["serde"] }
stun = "0.17.1"
tokio-stream = "0.1.18"
rcgen = "0.11.3"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "fat"           # Link-time optimization — critical for 8B node performance
codegen-units = 1     # Single codegen unit for maximum optimization
panic = "abort"       # No stack unwinding overhead
strip = true          # Strip debug symbols
